test/fail/vt_tree03.v3
//@execute 0=true; 1=false; 2=false; 3=false; 4=false
type Tree<T> {
	case Leaf(val: T);
	case Node(left: Tree<T>, right: Tree<T>);
}
def test<T>(a: int, l: Tree<T>, r: Tree<T>) -> bool {
	var x: Tree<T>;
	if (a == 0) x = l;
	if (a == 1) x = r;
	if (a == 2) x = Tree.Node(l, r);
	return l == x;
}
def main(a: int) -> bool {
	def l = Tree.Leaf(11), r = Tree.Leaf(12);
	return test(a, l, r) && test(a, Tree.Node(l, r), Tree.Node(r, l));
}
